--- a/paper.bib
+++ b/paper.bib
@@ -19,9 +19,9 @@
 @String{LNCS =    {Lecture Notes in Computer Science}}
 
 @inproceedings{SMBK:SECRYPT13,
-   author              = {G. Sarwar and 
-                          O. Mehani and 
-                          R. Boreli and 
+   author              = {G. Sarwar and
+                          O. Mehani and
+                          R. Boreli and
                           M. A. Kâafar},
    title               = {On the Effectiveness of Dynamic Taint Analysis for Protecting against Private Information Leaks on Android-based Devices},
    booktitle           = {SECRYPT},
@@ -35,7 +35,7 @@
  booktitle = {Proceedings of the 22Nd USENIX Conference on Security},
  year = {2013},
  pages = {113--130}
-} 
+}
 
 
 @inproceedings {SDW:SEC12,
@@ -52,7 +52,7 @@ pages = {553-567}
  booktitle = {Proceedings of the 20th USENIX Conference on Security},
  year = {2011},
  pages = {21--21}
-} 
+}
 
 @inproceedings{PS:BIS07,
  author = {J. Piskorski and M. Sydow},
@@ -60,7 +60,7 @@ pages = {553-567}
  booktitle = {Proceedings of the 10th International Conference on Business Information Systems},
  year = {2007},
  pages = {353--365}
-} 
+}
 
 @inproceedings{CFGW:MOBISYS11,
   author    = {E. Chin and
@@ -143,7 +143,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 18th ACM conference on Computer and communications security},
  year = {2011},
  pages = {639--652}
-} 
+}
 
 @inproceedings{BLJL:PLDI11,
  author = {A. Budi and D. Lo and L. Jiang and Lucia},
@@ -151,7 +151,7 @@ booktitle = {FASE},
  booktitle = {PLDI},
  year = {2011},
  pages = {447--457}
-} 
+}
 
 @inproceedings{GZJS:SPWMN12,
  author = {M. C. Grace and W. Zhou and X. Jiang and A. Sadeghi},
@@ -159,7 +159,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the fifth ACM conference on Security and Privacy in Wireless and Mobile Networks},
  year = {2012},
  pages = {101--112}
-} 
+}
 
 @inproceedings{RCE:CODASPY13,
  author = {V. Rastogi and Y. Chen and W. Enck},
@@ -167,7 +167,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the third ACM conference on Data and application security and privacy},
  year = {2013},
  pages = {209--220}
-} 
+}
 
 @InProceedings{EKKV:NDSS11,
   author = 	 {M. Egele and C. Kruegel and E. Kirda and G. Vigna},
@@ -182,7 +182,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 4th international conference on Cyberspace Safety and Security},
  year = {2012},
  pages = {33--47}
-} 
+}
 
 @inproceedings{WCGHHJSW:HOTOS13,
  author = {D. Wetherall and D. Choffnes and B. Greenstein and S. Han and P. Hornyack and J. Jung and S. Schechter and X. Wang},
@@ -190,7 +190,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 13th USENIX conference on Hot topics in operating systems},
   year = {2011},
   pages = {21--21}
-} 
+}
 
 @inproceedings{SPKS:WISTP12,
  author = {D. Schreckling and J. Posegga and J. K\"{o}stler and M. Schaff},
@@ -198,7 +198,7 @@ booktitle = {FASE},
  booktitle = {WISTP},
  year = {2012},
  pages = {208--223}
-} 
+}
 
 @inproceedings{RCE:CODAPSY13,
  author = {V. Rastogi and Y. Chen and W. Enck},
@@ -206,7 +206,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the third ACM conference on Data and application security and privacy},
  year = {2013},
  pages = {209--220}
-} 
+}
 
 @inproceedings{JHW:SPSM12,
  author = {J. Jung and S. Han and D. Wetherall},
@@ -215,7 +215,7 @@ booktitle = {FASE},
  series = {SPSM '12},
  year = {2012},
  pages = {45--50}
-} 
+}
 
 
 @inproceedings{NS:NDSS05,
@@ -233,7 +233,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 15th International Symposium on Software Reliability Engineering},
  year = {2004},
  pages = {198--209}
-} 
+}
 
 @inproceedings{TPT:ISSTA11,
   author    = {T. Tateishi and M. Pistoia and O. Tripp},
@@ -251,7 +251,7 @@ booktitle = {FASE},
  number = {1},
  year = {1974},
  pages = {168--173}
-} 
+}
 
 @article{F:CJ74,
   author    = {J. S. Fenton},
@@ -269,7 +269,7 @@ booktitle = {FASE},
  booktitle = {CCS},
  year = {2008},
  pages = {39--50}
-} 
+}
 
 @inproceedings{YYZGNW:CCS13,
  author = {Z. Yang and M. Yang and Y. Zhang and G. Gu and P. Ning and X. S. Wang},
@@ -277,7 +277,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 2013 ACM SIGSAC Conference on Computer and Communications Security},
  year = {2013},
  pages = {1043--1054}
-} 
+}
 
 @inproceedings{EGCCJMS:OSDI10,
  author = {W. Enck and P. Gilbert and B. Chun and L. P. Cox and J. Jung and P. McDaniel and A. N. Sheth},
@@ -285,7 +285,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 9th USENIX conference on Operating systems design and implementation},
  year = {2010},
  pages = {1--6}
-} 
+}
 
 @inproceedings{TPFSW:PLDI09,
  author = {O. Tripp and M. Pistoia and S. J. Fink and M. Sridharan and O. Weisman},
@@ -293,7 +293,7 @@ booktitle = {FASE},
  booktitle = {PLDI},
  year = {2009},
  pages = {87--97}
-} 
+}
 
 @article{N:ACS01,
  author = {G. Navarro},
@@ -303,14 +303,14 @@ booktitle = {FASE},
  number = {1},
  year = {2001},
  pages = {31--88}
-} 
+}
 
 @book{G:BOOK97,
  author = {D. Gusfield},
  title = {Algorithms on strings, trees, and sequences: computer science and computational biology},
  year = {1997},
  publisher = {Cambridge University Press}
-} 
+}
 
 @inproceedings{BKR:SP09,
  author = {M. Backes and B. Kopf and A. Rybalchenko},
@@ -318,7 +318,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the 2009 30th IEEE Symposium on Security and Privacy},
  year = {2009},
  pages = {141--153}
-} 
+}
 
 @inproceedings{L:CSFW02,
  author = {G. Lowe},
@@ -327,7 +327,7 @@ booktitle = {FASE},
  series = {CSFW '02},
  year = {2002},
  pages = {18--31}
-} 
+}
 
 @inproceedings{NMS:PLAS09,
  author = {J. Newsome and S. McCamant and D. Song},
@@ -335,7 +335,7 @@ booktitle = {FASE},
  booktitle = {Proceedings of the ACM SIGPLAN Fourth Workshop on Programming Languages and Analysis for Security},
  year = {2009},
  pages = {73--85}
-} 
+}
 
 @inproceedings{CLO:ISSTA07,
   author = {J. A. Clause and W. Li and A. Orso},
@@ -370,7 +370,7 @@ booktitle = {FASE},
  booktitle = {PLDI},
  year = {2008},
  pages = {193--205}
-} 
+}
 
 @techreport{FARBBKTOM:TR13,
 	AUTHOR =        {C. Fritz and S. Arzt, and S. Rasthofer and E. Bodden and A. Bartel and J. Klein and Y. Traon and D. Octeau and P. McDaniel},
@@ -379,4 +379,14 @@ booktitle = {FASE},
   INSTITUTION =   {Secure Software Engineering Group, EC Spride},
   YEAR  =         {2013},
   URL = {https://www.informatik.tu-darmstadt.de/fileadmin/user_upload/Group_CASED/Publikationen/TUD-CS-2013-0113.pdf}
+}
+
+@Article{Welch:1947,
+  Title                    = {The Generalization of Student's Problem when Several Different Population Variances are Involved},
+  Author                   = {Welch, Bernard L},
+  Journal                  = {Biometrika},
+  Year                     = {1947},
+  Number                   = {1--2},
+  Pages                    = {28--35},
+  Volume                   = {34}
 }
