--- a/results.tex
+++ b/results.tex
@@ -1,88 +1,179 @@
-\section{Detailed Results on Real-world Apps}\label{Se:completeRes}
+\section{Detailed Results \JCO{}{on Real-world Apps}}
+\label{Se:completeRes}
+\JC{
+\tableref{accuracyDBenchDetails} summarizes the results of the H1 experiment described in \secref{overhead}. 
+For each of the benchmarks, it specifies the number of true positive, false positive and false negative findings, as well as the calculated precision, recall and F-measure for the compared tools~-- \Tool\ and TaintDroid.
+The benchmarks for which the tools differ are highlighted, for convenience. 
+The F-measure is calculated by (a) averaging the corresponding values across all benchmarks and (b) directly by considering the total number of TPs, FPs and FNs results. Both values are given in \tableref{accuracyDBenchDetails}, outside and inside of the parentheses, respectively: 0.66 for TaintDroid vs. 0.96 for \Tool\ in the former case, and 0.78 vs 0.95 in the latter.
 
-In \secref{practical}, we describe an experiment designed to evaluate our Bayesian analysis in ``pure'' form, i.e. without the support of information-flow tracking to detect relevant values. To make our description of this experiment complete, we include \tableref{realworldAll}, which provides a detailed summary of the results of this experiment across all benchmarks (including ones on which no leakages were detected).
-%
-For comparability between the H-BD and T-BD configurations, we count different dynamic reports involving the same pair of source/sink APIs as a single leakage instance.
+Similarly, \tableref{realworldAll} summarizes the results of the H2 experiment described in \secref{practical}. 
+The first two columns of \tableref{realworldAll} list the applications and their respective domain, and the third column denotes whether crawling was exhaustive. 
+Then, the number of crashes, true positive, false positive and false negative findings, as well as the calculated precision, recall and F-measure are reported for both the H-BD and T-BD variant of \Tool. 
+As in \tableref{accuracyDBenchDetails}, the F-measure is calculated by (a) averaging the corresponding value across all benchmarks (0.99 for H-BD vs. 0.84 for T-BD), and (b) directly by considering the total number of TPs, FPs and FNs (0.98 vs. 0.74, in parentheses).
+}
+
+%As \tableref{realworldAll} highlights, the difference in leakage alarms by the H-BD and T-BD variants is dramatic. We have analyzed it, and came to the following explanations:
+%\begin{compactitem}
+%\item First, as noted in \secref{practical}, the T-BD variant introduces significantly more instability than the H-BD variant, causing illegal application behaviors in 21 cases (compared to only 8 under H-BD). We have investigated this large gap between the H-BD and T-BD configurations, including by decompiling the subject apps. Our analysis links the vast majority of illegal behaviors to limitations that
+%TaintDroid casts on loading of third-party libraries. For this reason, certain functionality is not executed, also leading to exceptional app states, which both inhibit certain data leaks.\footnote{
+%	For a technical explanation, see forum comment by William Enck, the TaintDroid moderator, at \href{https://groups.google.com/forum/\#!topic/android-security-discuss/U1fteEX26bk}{https://groups.google.com/forum/\#!topic/android-security-discuss/U1fteEX26bk}.
+%}
+%\item A secondary reason why H-BD is able to detect more leakages, accounting for {\tt com.bitfitlabs.fingerprint.lockscreen}, is that this benchmark makes use of the {\tt mobileCore} module,\footnote{
+%\href{https://www.mobilecore.com/sdk/}{https://www.mobilecore.com/sdk/}
+%} which is a highly optimized and obfuscated library. We suspect that data flow breaks within this library, though we could not fully confirm this.
+%\end{compactitem}
 
 \begin{table*}
+\setlength{\tabcolsep}{0.3em}
 \begin{small}
 \begin{center}
-	\begin{tabular}{l|c|c|c|c}
-	\multicolumn{1}{c|}{App} & Domain & Deep crawl? & H-BD & T-BD \\
-	\hline
-	{\tt air.au.com.metro.DumbWaysToDie}			& games/casual 		& 		      		& 0 (C) & 0 (C) \\
-	{\tt at.nerbrothers.SuperJump}					& games/arcade 		& 		      		& 1 & 0 (C) \\
-	{\tt atsoft.games.smgame}						& games/arcade 		& \checkmark 	& 6 & 6  \\
-	{\tt com.antivirus}							& communication 			& \checkmark 	& 1 & 1 \\
-	{\tt com.appershopper.ios7lockscreen}			& personalization 		&		      		& 8 (1 FP) & 7 \\
-	{\tt com.applicaster.il.hotvod}					& entertainment 		& \checkmark 	& 2 & 2 \\
-	{\tt com.appstar.callrecorder}					& tools 					& 		      		& 0        & 0    \\
-	{\tt com.awesomecargames.mountainclimbrace\_1}						
-											& games/racing					& 		      		& 0 (C) & 0 (C) \\
-	{\tt com.bestcoolfungames.antsmasher}	& games/arcade 			& \checkmark 	& 2 & 2 \\
-	{\tt com.bigduckgames.flow}					& games/puzzles		& 		      		& 2 & 0 (C) \\
-	{\tt com.bitfitlabs.fingerprint.lockscreen}			& games/casual 		& 		      		& 4 & 0 \\
-	{\tt com.channel2.mobile.ui}					& news 				& \checkmark 	& 2 & 2  \\
-	{\tt com.chillingo.parkingmaniafree.android.rowgplay} 		
-													&	 games/racing 		& 				& 0 (C) & 0 (C) \\
-	{\tt com.cleanmaster.mguard}					&  tools 				&\checkmark	& 2 & 2 \\
-	{\tt com.coolfish.cathairsalon}					&  games/casual 		&\checkmark	& 5 & 0 (C) \\
-	{\tt com.coolfish.snipershooting}				& games/action 		&\checkmark	& 5 & 0 (C) \\
-	{\tt com.cube.gdpc.isr}						& health \& fitness 			& 				& 0 (C) & 0 (C) \\
-	{\tt com.cyworld.camera}						& photography  		& 		      		& 1 & 1 \\
-	{\tt com.devuni.flashlight} 					& tools 					& \checkmark   		& 2 & 2 \\
-	{\tt com.digisoft.TransparentScreen}		& entertainment 			&\checkmark	& 2 & 2 \\
-	{\tt com.domobile.applock}					& tools  					&\checkmark	& 0 & 0   \\
-	{\tt com.dropbox.android}						& productivity 			&\checkmark	& 1 & 0 (C) \\
-	{\tt com.ea.game.fifa14\_row}					& games/sports 		& 		      		& 0 & 0 (C) \\
-	{\tt com.ebay.mobile}							& shopping 				& 					& 0 & 0 \\
-	{\tt com.facebook.katana} 						& social 				& \checkmark 	& 0 & 0 \\
-	{\tt com.facebook.orca} 						& communication 		& 	     			& 0  & 0 \\
-	{\tt com.g6677.android.cbaby}					& games/casual 		& 				& 2    & 0 (C) \\
-	{\tt com.g6677.android.chospital}				& games/casual 		& 		      		& 2 & 0 (C) \\
-    {\tt com.g6677.android.design}					& games/casual 		& 		      		& 2 & 0 (C) \\
-	{\tt com.g6677.android.pnailspa}				& games/casual 		& 		      		& 2 & 0 (C) \\
-	{\tt com.g6677.android.princesshs} 				& games/casual 		& 		      		& 2 & 0 (C) \\
-	{\tt com.gameclassic.towerblock}				& games/puzzles 		&\checkmark	& 0 & 0 (C) \\
-	{\tt com.gameloft.android.ANMP.GloftDMHM}		& games/casual 	&		      		& 0  & 0   \\
-	{\tt com.game.fruitlegendsaga}					& games/puzzles 		& 		      		& 0 & 0 \\
-	{\tt com.gau.go.launcherex}					& personalization 			& 		      		& 0 & 0 \\
-	{\tt com.glu.deerhunt2}						& games/arcade 			& 				& 0 (C) & 0 (C) \\
-	{\tt com.goldtouch.mako}						& news 				&\checkmark	& 3 & 3 \\
-	{\tt com.goldtouch.ynet} 						& news 				& \checkmark 	& 2 & 2 \\
-	{\tt com.google.android.apps.docs}				& productivity 			& 		      		& 0 & 0 \\
-	{\tt com.google.android.apps.translate}			& tools 					& 		      		& 0 & 0 \\
-	{\tt com.google.android.youtube}				& media \& video		& 		      		& 1 & 1 \\
-	{\tt com.google.earth}						& travel \& local 			& 				& 0 (C) & 0 (C) \\
-	{\tt com.halfbrick.fruitninjafree}					& games/arcade 		& 		      		& 0 & 0 \\
-	{\tt com.halfbrick.jetpackjoyride}				& games/arcade 		&\checkmark	& 0 & 0 \\
-	{\tt com.icloudzone.AsphaltMoto2}				& games/racing 		& 		      		& 0 & 0 \\
-	{\tt com.ideomobile.hapoalim}					& finance 				& 		      		& 0 & 0 \\
-	{\tt com.imangi.templerun2} 					& games/arcade 		& 		      		& 0 (C) & 0 (C) \\
-	{\tt com.kiloo.subwaysurf} 						& games/arcade 		& 		      		& 0 (C) & 0 (C) \\
-	{\tt com.king.candycrushsaga}					& games/arcade 		& 		      		& 1 & 0 (C) \\
-	{\tt com.sgiggle.production}					& social 					& 		      		& 0       & 0     \\
-	{\tt com.skype.raider} 						& communication 			& 		      		& 2 	& 2 \\
-	{\tt com.UBI.A90.WW} 						& games/arcade 			& 		      		& 0        & 0   \\
-	{\tt com.viber.voip} 							& communication 			&		      		& 0        & 0    \\
-	{\tt com.whatsapp} 							& communication 			&		      		& 0        & 0   \\
-	\hline \hline
-	{\bf total / apps:}	& & 18 / 54  & 65 / 26 (1 FP)  & 35 / 14
-	\end{tabular}
-	\end{center}
-	\caption{\label{Ta:realworldAll}Detailed summary of the results of the H2 experiment described in \secref{practical}}
+\resizebox{\textwidth}{!}{
+ \begin{tabular}{|l||C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}||C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}|C{1.4cm}|}
+\hline
+ \multicolumn{1}{|c||}{}                           & \multicolumn{6}{c||}{} & \multicolumn{6}{c|}{} \\[-0.08in]
+ \multicolumn{1}{|c||}{\multirow{3}{*}{Benchmark}} & \multicolumn{6}{c||}{\Tool} & \multicolumn{6}{c|}{TaintDroid} \\[0.04in]
+ \cline{2-13}
+ & & & & & & & & & & & & \\[-0.08in]
+ & TPs & FPs & FNs & Precision & Recall & F-measure & TPs & FPs & FNs & Precision & Recall & F-measure \\[0.04in]
+\hline
+ & & & & & & & & & & & & \\[-0.10in]
+ActivityCommunication1  &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+ActivityLifecycle1      &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+ActivityLifecycle2      &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+ActivityLifecycle4      &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Library2                &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Obfuscation1            &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+PrivateDataLeak3        &  1  &  1  &  0  &  0.5  &  1  &  0.667  &  1  &  1  &  0  &  0.5  &  1  &  0.667  \\
+{\bf AnonymousClass1         }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf ArrayAccess1            }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf ArrayAccess2            }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf HashMapAccess1          }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+Button1                 &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Button3                 &  2  &  0  &  0  &  1  &  1  &  1  &  2  &  0  &  0  &  1  &  1  &  1  \\
+{\bf Ordering1               }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  2  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+RegisterGlobal1         &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+DirectLeak1             &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+{\bf FieldSensitivity2       }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf FieldSensitivity3       }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }\\
+{\bf FieldSensitivity4       }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf ImplicitFlow1           }&{\bf  0  }&{\bf  0  }&{\bf  2  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  2  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }\\
+InheritedObjects1       &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+{\bf ListAccess1             }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf LocationLeak1           }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  2  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf LocationLeak2           }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  2  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+Loop1                   &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Loop2                   &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+ApplicationLifecycle1   &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+ApplicationLifecycle3   &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+MethodOverride1         &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+{\bf ObjectSensitivity1      }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  1  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+{\bf ObjectSensitivity2      }&{\bf  0  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  1  }&{\bf  1  }&{\bf  0  }&{\bf  2  }&{\bf  0  }&{\bf  0  }&{\bf  1  }&{\bf  0  }\\
+Reflection1             &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Reflection2             &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Reflection3             &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+Reflection4             &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+SourceCodeSpecific1     &  5  &  0  &  0  &  1  &  1  &  1  &  5  &  0  &  0  &  1  &  1  &  1  \\
+StaticInitialization1   &  1  &  0  &  0  &  1  &  1  &  1  &  1  &  0  &  0  &  1  &  1  &  1  \\
+\hline
+\hline
+ & & & & & & & & & & & & \\[-0.10in]
+Total                   &   29  &    1  &    2  &         &         &         &   31  &   17  &    0  &         &         &         \\
+\hline
+ & & & & & & & & & & & & \\[-0.10in]
+Average                 &      	&       &       &  0.98  &  0.97  &  0.96 (0.95)  &       &       &       &  0.66  &  1.00  &  0.66 (0.78)  \\
+\hline
+ \end{tabular}
+}% resizebox
+ \end{center}
+ \caption{\label{Ta:accuracyDBenchDetails}Detailed summary of the results of the H1 experiment described in \secref{overhead}}
+\end{small}
+\end{table*}
+
+
+%In \secref{practical}, we describe an experiment designed to evaluate our Bayesian analysis in ``pure'' form, i.e. without the support of information-flow tracking to detect relevant values. To make our description of this experiment complete, we include \tableref{realworldAll}, which provides a detailed summary of the results of this experiment across all benchmarks (including ones on which no leakages were detected).
+%%
+%For comparability between the H-BD and T-BD configurations, we count different dynamic reports involving the same pair of source/sink APIs as a single leakage instance.
+
+\begin{table*}
+\setlength{\tabcolsep}{0.3em}
+\begin{small}
+\begin{center}
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|l|c|c||c|c|c|c|c|c|c||c|c|c|c|c|c|c|}
+\hline
+ & & & \multicolumn{7}{c||}{} & \multicolumn{7}{c|}{}\\[-0.10in]
+\multicolumn{1}{|c|}{\multirow{2}{*}{App}} & \multicolumn{1}{c|}{\multirow{2}{*}{Domain}} & \multicolumn{1}{c||}{\multirow{2}{*}{Deep crawl?}} & \multicolumn{7}{c||}{H-BD} & \multicolumn{7}{c|}{T-BD} \\
+\cline{4-17}
+ & & & & & & & & & & & & & & & &\\[-0.10in]
+&                          &                       &      Crashes      &      TPs      &      FPs      &      FNs      &      Precision      &      Recall      &      F-measure      &      Crashes      &      TPs      &      FPs      &      FNs      &      Precision      &      Recall      &      F-measure      \\
+\hline
+air.au.com.metro.DumbWaysToDie                    &       games/casual       &                       &      \checkmark   &      0        &      0        &      0        &      1              &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1        &      1              &      1      \\
+at.nerbrothers.SuperJump                          &       games/arcade       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf atsoft.games.smgame                               }&{\bf       games/arcade       }&{\bf      \checkmark      }&{\bf            }&{\bf      4      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      4      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+{\bf com.antivirus                                     }&{\bf       communication       }&{\bf      \checkmark      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+{\bf com.appershopper.ios7lockscreen                   }&{\bf       personalization       }&{\bf            }&{\bf            }&{\bf      5      }&{\bf      1      }&{\bf      0      }&{\bf      0.833      }&{\bf      1      }&{\bf      0.909      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0.667      }&{\bf      0.8      }\\
+com.applicaster.il.hotvod                         &       entertainment       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.appstar.callrecorder                          &       tools      &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.awesomecargames.mountainclimbrace\_1          &       games/racing       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.bestcoolfungames.antsmasher                   }&{\bf       games/arcade       }&{\bf      \checkmark      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+com.bigduckgames.flow                             &       games/puzzles       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.bitfitlabs.fingerprint.lockscreen             }&{\bf       games/casual       }&{\bf            }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+com.channel2.mobile.ui                           &       news       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.chillingo.parkingmaniafree.android.rowgplay  &       games/racing       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.cleanmaster.mguard                           }&{\bf       tools       }&{\bf      \checkmark      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+{\bf com.coolfish.cathairsalon                        }&{\bf       games/casual       }&{\bf      \checkmark      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+{\bf com.coolfish.snipershooting                      }&{\bf       games/action       }&{\bf      \checkmark      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+com.cube.gdpc.isr                                &       health \& fitness      &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.cyworld.camera                               &       photography       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.devuni.flashlight                            &       tools       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.digisoft.TransparentScreen                   }&{\bf       entertainment       }&{\bf      \checkmark      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      2      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+com.domobile.applock       &       tools       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.dropbox.android       &       productivity       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.ea.game.fifa14\_row       &       games/sports       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.ebay.mobile       &       shopping       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.facebook.katana       &       social       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.facebook.orca       &       communication       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.g6677.android.cbaby       }&{\bf       games/casual       }&{\bf            }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+{\bf com.g6677.android.chospital       }&{\bf       games/casual       }&{\bf            }&{\bf      \checkmark      }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+{\bf com.g6677.android.design       }&{\bf       games/casual       }&{\bf            }&{\bf      \checkmark      }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+{\bf com.g6677.android.pnailspa       }&{\bf       games/casual       }&{\bf            }&{\bf      \checkmark      }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+{\bf com.g6677.android.princesshs       }&{\bf       games/casual       }&{\bf            }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf      \checkmark      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      0      }&{\bf      0      }\\
+com.gameclassic.towerblock       &       games/puzzles       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.gameloft.android.ANMP.GloftDMHM       &       games/casual       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.game.fruitlegendsaga       &       games/puzzles       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.gau.go.launcherex       &       personalization       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.glu.deerhunt2       &       games/arcade       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+{\bf com.goldtouch.mako       }&{\bf       news       }&{\bf      \checkmark      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }&{\bf            }&{\bf      1      }&{\bf      0      }&{\bf      0      }&{\bf      1      }&{\bf      1      }&{\bf      1      }\\
+com.goldtouch.ynet       &       news       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.google.android.apps.docs       &       productivity       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.google.android.apps.translate       &       tools       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.google.android.youtube       &       media \& video      &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.google.earth       &       travel \& local      &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.halfbrick.fruitninjafree       &       games/arcade       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.halfbrick.jetpackjoyride       &       games/arcade       &      \checkmark      &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.icloudzone.AsphaltMoto2       &       games/racing       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.ideomobile.hapoalim       &       finance       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.imangi.templerun2       &       games/arcade       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.kiloo.subwaysurf       &       games/arcade       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.king.candycrushsaga       &       games/arcade       &            &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      &      \checkmark      &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.sgiggle.production       &       social       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.skype.raider       &       communication       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.UBI.A90.WW       &       games/arcade       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.viber.voip       &       communication       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+com.whatsapp         &       communication       &            &            &      0      &      0      &      0      &      1      &      1      &      1      &            &      0      &      0      &      0      &      1      &      1      &      1      \\
+\hline
+\hline
+ & & & & & & & & & & & & & & & &\\[-0.10in]
+Total                &             &      17      &      12      &      27      &      1      &      0      &                 &                 &                 &      22      &      13      &      0      &      9      &                 &                 &                 \\
+\hline
+ & & & & & & & & & & & & & & & &\\[-0.10in]
+Average              &             &              &              &              &         	  &             &      0.99      &      1.00      &      0.99 (0.98)      &              &              &             &             &      1.00     &      0.84      &      0.84 (0.74)      \\
+\hline
+\end{tabular}
+}% resizebox
+\end{center}
+\caption{\label{Ta:realworldAll}Detailed summary of the results of the H2 experiment described in \secref{practical}}
 \end{small}
 \end{table*} 
 
-Analogously to \tableref{realworld}, the first two columns of \tableref{realworldAll} list the applications and their respective domain, and the middle column denotes whether crawling was exhaustive. The last two columns specify the overall number of findings by the H-BD and T-BD variants, respectively. We also indicate whether at any point during the run we experienced runtime errors, crashes or abnormal behaviors using the ``(C)'' label alongside the number of findings.
 
-As \tableref{realworldAll} highlights, the difference in leakage alarms by the H-BD and T-BD variants is dramatic. We have analyzed it, and came to the following explanations:
-\begin{compactitem}
-\item First, as noted in \secref{practical}, the T-BD variant introduces significantly more instability than the H-BD variant, causing illegal application behaviors in 21 cases (compared to only 8 under H-BD). We have investigated this large gap between the H-BD and T-BD configurations, including by decompiling the subject apps. Our analysis links the vast majority of illegal behaviors to limitations that
-TaintDroid casts on loading of third-party libraries. For this reason, certain functionality is not executed, also leading to exceptional app states, which both inhibit certain data leaks.\footnote{
-	For a technical explanation, see forum comment by William Enck, the TaintDroid moderator, at \href{https://groups.google.com/forum/\#!topic/android-security-discuss/U1fteEX26bk}{https://groups.google.com/forum/\#!topic/android-security-discuss/U1fteEX26bk}.
-} 
-\item A secondary reason why H-BD is able to detect more leakages, accounting for {\tt com.bitfitlabs.fingerprint.lockscreen}, is that this benchmark makes use of the {\tt mobileCore} module,\footnote{ 
-\href{https://www.mobilecore.com/sdk/}{https://www.mobilecore.com/sdk/}
-} which is a highly optimized and obfuscated library. We suspect that data flow breaks within this library, though we could not fully confirm this. 
-\end{compactitem}
